--- a/bigbluebutton-web/grails-app/conf/bigbluebutton.properties
+++ b/bigbluebutton-web/grails-app/conf/bigbluebutton.properties
@@ -135,8 +135,8 @@ bigbluebutton.web.logoutURL=default
 
 # The url of the BigBlueButton client. User's will be redirected here when
 # successfully joining the meeting.
-defaultClientUrl=${bigbluebutton.web.serverURL}/client/BigBlueButton.html
-#defaultClientUrl=http://192.168.0.235/3rd-party.html
+#defaultClientUrl=${bigbluebutton.web.serverURL}/client/BigBlueButton.html
+defaultClientUrl=http://192.168.1.126/client/StreamLine/3rd-party.html
 
 # The default avatar image to display if nothing is passed on the JOIN API (avatarURL)
 # call. This avatar is displayed if the user isn't sharing the webcam and
